Updating beta-dao to use parent job in local repo

--- a/.github/workflows/beta-dao.yml
+++ b/.github/workflows/beta-dao.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   betadao:
-    uses: mindthealgorithm/daois/.github/workflows/holders.yml@main
+    uses: jcinis/daois/.github/workflows/holders.yml@main
     with:
       address: "0xE2E38C81531c163eD921f86BF6c0D044957f8E23"
     secrets:
